# cmake_osx_python_bundle_example

./: CMakeLists.txt  README.md  build_cpython.sh
.github/workflows/: cmake.yml
